tests/typing/good/testfile-type_parameter-4.scala

class A { def m() : Any = return }
object Main { def main(args: Array[String]) { } }
