tests/typing/bad/testfile-var1-1.scala
class A { def m(x: Int) : Boolean = { return x } }

object Main { def main(args: Array[String]) { } }
